// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when closed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  border: 1px solid #007;
  background-color: #fff;
  padding: 8px 12px;
  border-radius: 4px;
}

.c0:hover {
  cursor: pointer;
}

<div
  className="c0"
/>
`;

exports[`renders correctly when open 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  border: 1px solid #007;
  background-color: #fff;
  padding: 8px 12px;
  border-radius: 4px;
  border-left: 1px solid #007;
  border-top: 1px solid #007;
  border-right: 1px solid #007;
  border-radius: 4px 4px 0 0;
}

.c0:hover {
  cursor: pointer;
}

<div
  className="c0"
/>
`;
